--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -1,6 +1,7 @@
 ---
 layout: archive
-permalink: /year-archive/
+<!-- permalink: /year-archive/ -->
+permalink: /
 title: "Blog posts"
 author_profile: true
 redirect_from:
